Step 22.24: Add two classes to fix an issue with overflow

--- a/client/main.scss
+++ b/client/main.scss
@@ -18,6 +18,15 @@ body {
   font-family: 'Muli', sans-serif;
 }
 
+body.mobile {
+  overflow: hidden;
+}
+
+body.web {
+  overflow: visible;
+  position: initial;
+}
+
 .sebm-google-map-container {
   width: 450px;
   height: 450px;
